syntax = "proto3";

package indices.speciesdiversity;

option java_multiple_files = true;
option java_package = "in.foresthut.impact.models.indices.speciesdiversity";

message SpeciesDiversityRequest {
  string site_id = 1;
  int32 for_year = 2;
}

message SpeciesDiversityResponse {
  string site_id = 1;
  int32 for_year = 2;
  double index = 3;
  map<string, int64> species_count= 4;
}


service SpeciesDiversityIndex {
  rpc Get(SpeciesDiversityRequest) returns (SpeciesDiversityResponse);
}
